Development
    libgmtk - gmtk_media_player, set default zoom to 1.0
    libgmtk - gmtk_media_player, clean up some attribute setter/getters
    libgmtk - gmtk_media_player, implement zoom factor for media, useful for panscan
    Shutdown mplayer before clearing playlist in open dtv, acd, vcd, and atv
    libgmtk - detect mplayer2, and allow setting a custom mplayer
    Convert mute 1\nseek 0 0\n commands to separate commands
    Add support for MPlayer2 detection
    Use a file chooser button to pick the mplayer executable rather than typing in the path
    Fix memory pointer issue that could lead to crash in mplayer thread
    Rework Next option when caching is enabled (recommend that caching be disabled)
    Be more specific in SPEC file
    Fix RPM generation when using GSettings
    Fix problem with STOP when playing a playlist
    libgmlib - gm_audio, include math.h, Issue #499
    libgmtk - gmtk_media_player, fix memory leak with stored color
    libgmtk - gmtk_media_player, manage widget background color correctly
    libgmtk - gmtk_audio_meter, move a varible context
    libgmtk - gmtk_media_player, get_allocation
    Try out silent make files
    Run update-po
    When stopping media, just quit mplayer instead of pausing and seeking to 0
    Fix resize issue in vertical layout
    Fix software volume stored value
    Apply OpenBSD patches 
    Make playlist columns reorderable with drag and drop
    libgmtk - gmtk_media_player, add attribute disable_upscaling
    Add new preference to plugin tab, to disable scaling when video is embedded
    libgmtk - gmtk_media_player, parse mplayer properties
    libgmtk - gmtk_media_player, audio track selection fixes
    libgmtk - gmtk_media_player, initial subtitle and audio track detection
    libgmtk - gmtk_media_player, more hotkey processing
    libgmtk - gmtk_media_player, commit correct patch
    libgmtk - gmtk_media_player, handle +,-,#,., and j hotkeys